--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_main"
-        tools:context="com.nicolag.accessibilitydemo.ui.MainActivity">
+        tools:context="com.nicolag.accessibilitydemo.ui.view.MainActivity">
 
     <ImageView
             android:id="@+id/welcomeImageView"
