--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,5 +10,8 @@
         <item
                 android:id="@+id/nav_tabs"
                 android:title="@string/menu_tabs"/>
+        <item
+                android:id="@+id/nav_rating"
+                android:title="@string/menu_rating_bar"/>
     </group>
 </menu>
