--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,8 @@
         <item
                 android:id="@+id/nav_list"
                 android:title="@string/menu_list_view"/>
+        <item
+                android:id="@+id/nav_links"
+                android:title="@string/menu_links"/>
     </group>
 </menu>
