--- a/app/src/main/res/layout/list_view_fragment.xml
+++ b/app/src/main/res/layout/list_view_fragment.xml
@@ -3,10 +3,10 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/listViewContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/app_bar_main"
         tools:context="com.nicolag.accessibilitydemo.ui.MainActivity">
 
     <ListView
