--- a/app/src/main/res/layout/rating_bar_fragment.xml
+++ b/app/src/main/res/layout/rating_bar_fragment.xml
@@ -7,7 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:showIn="@layout/app_bar_main"
         tools:context="com.nicolag.accessibilitydemo.ui.MainActivity">
 
     <RatingBar
@@ -24,7 +23,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            tools:text="Centre text" />
+            tools:text="@string/rate_me" />
 
     <Button
             android:id="@+id/button1"
@@ -47,7 +46,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            tools:text="Centre text" />
+            tools:text="@string/rate_me" />
 
     <Button
             android:id="@+id/button2"
