--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,10 +17,14 @@
                 android:id="@+id/nav_list"
                 android:title="@string/menu_list_view" />
         <item
-                android:id="@+id/nav_links"
-                android:title="@string/menu_links" />
-        <item
                 android:id="@+id/nav_search"
                 android:title="@string/menu_search" />
+        <item
+                android:id="@+id/nav_links"
+                android:title="@string/menu_links" />
+
+        <item
+                android:id="@+id/nav_text"
+                android:title="@string/menu_text" />
     </group>
 </menu>
