--- a/app/src/main/res/layout/rating_bar_fragment.xml
+++ b/app/src/main/res/layout/rating_bar_fragment.xml
@@ -16,7 +16,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp" />
 
     <TextView
             android:id="@+id/textView1"
@@ -39,7 +39,9 @@
             android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_marginTop="50dp" />
+            android:layout_marginTop="50dp"
+            android:scaleX="1.5"
+            android:scaleY="1.5" />
 
     <TextView
             android:id="@+id/textView2"
