--- a/app/src/main/res/layout/tabs_fragment.xml
+++ b/app/src/main/res/layout/tabs_fragment.xml
@@ -13,10 +13,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+    <ImageView
+            android:id="@+id/mainImageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_menu_camera"
+            android:alpha="0.5"
+            android:layout_centerInParent="true"
+            android:importantForAccessibility="no"/>
     <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_below="@id/mainImageView"
+            android:padding="12dp"
+            android:layout_centerHorizontal="true"
             tools:text="Centre text"/>
 </RelativeLayout>
