--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,6 +8,9 @@
                 android:id="@+id/nav_home"
                 android:title="@string/menu_home" />
         <item
+                android:id="@+id/nav_buttons"
+                android:title="@string/menu_buttons" />
+        <item
                 android:id="@+id/nav_tabs"
                 android:title="@string/menu_tabs" />
         <item
