Add first card in cards layout

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -29,5 +29,8 @@
         <item
                 android:id="@+id/nav_text"
                 android:title="@string/menu_text" />
+        <item
+                android:id="@+id/nav_layout"
+                android:title="@string/menu_layout" />
     </group>
 </menu>
