--- a/app/src/main/res/layout/card_2.xml
+++ b/app/src/main/res/layout/card_2.xml
@@ -3,16 +3,17 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/card1"
+        android:id="@+id/card2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
         android:focusable="true">
 
     <android.support.v7.widget.CardView
-            android:id="@+id/avatar1"
+            android:id="@+id/avatar2"
             android:layout_width="@dimen/min_touch_target"
             android:layout_height="@dimen/min_touch_target"
+            android:importantForAccessibility="no"
             app:cardCornerRadius="24dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -22,26 +23,26 @@
                 android:layout_width="match_parent"
                 android:src="@drawable/avatar"
                 android:scaleType="centerCrop"
-                android:contentDescription="@string/avatar_content_description" />
+                android:importantForAccessibility="no" />
     </android.support.v7.widget.CardView>
 
     <TextView
-            android:id="@+id/title1"
+            android:id="@+id/title2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:maxLines="1"
             android:ellipsize="end"
             android:layout_marginStart="4dp"
-            app:layout_constraintStart_toEndOf="@id/avatar1"
+            app:layout_constraintStart_toEndOf="@id/avatar2"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/likes1"
+            app:layout_constraintEnd_toStartOf="@id/likes2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constrainedWidth="true"
             tools:text="@tools:sample/full_names"/>
 
     <TextView
-            android:id="@+id/likes1"
+            android:id="@+id/likes2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/layout_likes"
@@ -49,53 +50,53 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-            android:id="@+id/timestamp1"
+            android:id="@+id/timestamp2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/layout_timestamp"
             android:layout_marginStart="4dp"
-            app:layout_constraintTop_toBottomOf="@id/title1"
-            app:layout_constraintStart_toEndOf="@id/avatar1" />
+            app:layout_constraintTop_toBottomOf="@id/title2"
+            app:layout_constraintStart_toEndOf="@id/avatar2" />
 
     <TextView
-            android:id="@+id/content1"
+            android:id="@+id/content2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/welcome_subtitle_text"
             android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:maxLines="2"
-            app:layout_constraintTop_toBottomOf="@id/avatar1"
+            app:layout_constraintTop_toBottomOf="@id/avatar2"
             app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-            android:id="@+id/heart1"
+            android:id="@+id/heart2"
             android:layout_width="@dimen/min_touch_target"
             android:layout_height="@dimen/min_touch_target"
             android:src="@drawable/ic_heart"
             android:padding="12dp"
             android:contentDescription="@string/heart_content_description"
-            app:layout_constraintTop_toBottomOf="@id/content1"
+            app:layout_constraintTop_toBottomOf="@id/content2"
             app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-            android:id="@+id/comment1"
+            android:id="@+id/comment2"
             android:layout_width="@dimen/min_touch_target"
             android:layout_height="@dimen/min_touch_target"
             android:src="@drawable/ic_comment"
             android:padding="12dp"
             android:contentDescription="@string/comment_content_description"
-            app:layout_constraintTop_toBottomOf="@id/content1"
-            app:layout_constraintStart_toEndOf="@id/heart1" />
+            app:layout_constraintTop_toBottomOf="@id/content2"
+            app:layout_constraintStart_toEndOf="@id/heart2" />
 
     <ImageView
-            android:id="@+id/share1"
+            android:id="@+id/share2"
             android:layout_width="@dimen/min_touch_target"
             android:layout_height="@dimen/min_touch_target"
             android:src="@drawable/ic_share"
             android:padding="12dp"
             android:contentDescription="@string/share_content_description"
-            app:layout_constraintTop_toBottomOf="@id/content1"
-            app:layout_constraintStart_toEndOf="@id/comment1" />
+            app:layout_constraintTop_toBottomOf="@id/content2"
+            app:layout_constraintStart_toEndOf="@id/comment2" />
 
 </android.support.constraint.ConstraintLayout>
