--- a/app/src/main/res/layout/layout_fragment.xml
+++ b/app/src/main/res/layout/layout_fragment.xml
@@ -19,4 +19,13 @@
         <include layout="@layout/card_1" />
     </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp" >
+
+        <include layout="@layout/card_2" />
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
