--- a/app/src/main/res/layout/buttons_fragment.xml
+++ b/app/src/main/res/layout/buttons_fragment.xml
@@ -50,7 +50,7 @@
             android:paddingTop="12dp"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
-            tools:text="Tick Cross hint Button" />
+            tools:text="Tick Cross wrapped Button" />
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -58,23 +58,35 @@
             android:paddingStart="12dp"
             android:paddingEnd="12dp">
 
-        <ImageButton
-                android:id="@+id/tick2"
-                android:background="@drawable/ic_tick"
+        <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minHeight="@dimen/min_touch_target"
-                android:minWidth="@dimen/min_touch_target"
-                tools:ignore="ContentDescription" />
+                android:focusable="true">
 
-        <ImageButton
-                android:id="@+id/cross2"
-                android:background="@drawable/ic_cross"
+            <ImageButton
+                    android:id="@+id/tick2"
+                    android:background="@drawable/ic_tick"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minHeight="@dimen/min_touch_target"
+                    android:minWidth="@dimen/min_touch_target"
+                    android:importantForAccessibility="no" />
+        </FrameLayout>
+
+        <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minHeight="@dimen/min_touch_target"
-                android:minWidth="@dimen/min_touch_target"
-                tools:ignore="ContentDescription" />
+                android:focusable="true">
+
+            <ImageButton
+                    android:id="@+id/cross2"
+                    android:background="@drawable/ic_cross"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minHeight="@dimen/min_touch_target"
+                    android:minWidth="@dimen/min_touch_target"
+                    android:importantForAccessibility="no" />
+        </FrameLayout>
     </LinearLayout>
 
     <TextView
